--- a/XcodeAndSwift3/PlainOldNotes/PlainOldNotes/Base.lproj/Main.storyboard
+++ b/XcodeAndSwift3/PlainOldNotes/PlainOldNotes/Base.lproj/Main.storyboard
@@ -22,13 +22,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pny-7e-szp">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="2h6-h5-eY8">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2h6-h5-eY8" id="1Sb-K1-jwy">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Pny-7e-szp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7Rg-nV-cTn"/>
+                            <constraint firstItem="Pny-7e-szp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="7Rg-nV-cTn"/>
                             <constraint firstItem="Pny-7e-szp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BA4-GK-rx6"/>
                             <constraint firstItem="Pny-7e-szp" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="N5M-Ky-3mk"/>
                             <constraint firstAttribute="trailing" secondItem="Pny-7e-szp" secondAttribute="trailing" id="uTW-2V-u5I"/>
