--- a/XcodeAndSwift3/WarCardGame/ex_11_keepingScore/keepingScore/Base.lproj/Main.storyboard
+++ b/XcodeAndSwift3/WarCardGame/ex_11_keepingScore/keepingScore/Base.lproj/Main.storyboard
@@ -53,11 +53,12 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jtV-aE-L0V" userLabel="PlayButtonContainer">
-                                <rect key="frame" x="0.0" y="347" width="375" height="324"/>
+                                <rect key="frame" x="0.0" y="337" width="375" height="334"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zIy-bF-EPm" userLabel="PlayRoundButton">
-                                        <rect key="frame" x="149" y="25" width="77" height="31"/>
+                                        <rect key="frame" x="149" y="25" width="77" height="41"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="41" id="Lw4-An-iN8"/>
                                             <constraint firstAttribute="width" constant="77" id="vO8-v7-KVk"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -69,10 +70,10 @@
                                         </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1k-CP-mcf" userLabel="ScoreBoardContainer">
-                                        <rect key="frame" x="42" y="78" width="290" height="128"/>
+                                        <rect key="frame" x="42" y="83" width="290" height="128"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzr-Wv-N3T" userLabel="leftScoreLabel">
-                                                <rect key="frame" x="29" y="-3" width="64" height="25"/>
+                                                <rect key="frame" x="29" y="-10.5" width="64" height="25"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="25" id="0tl-tb-35I"/>
                                                     <constraint firstAttribute="width" constant="64" id="iRI-wH-LzP"/>
@@ -82,7 +83,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CPU" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vY2-d4-yoy" userLabel="rightScoreLabel">
-                                                <rect key="frame" x="209" y="0.0" width="47" height="21"/>
+                                                <rect key="frame" x="209" y="-8" width="47" height="21"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="47" id="Mu9-Uc-Vcf"/>
                                                     <constraint firstAttribute="height" constant="21" id="ZLj-Cp-zhA"/>
@@ -92,7 +93,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xdz-3x-X4u" userLabel="rightScoreLabel">
-                                                <rect key="frame" x="175" y="40" width="115" height="49"/>
+                                                <rect key="frame" x="175" y="28" width="115" height="49"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="115" id="ZC9-eG-IuF"/>
                                                     <constraint firstAttribute="height" constant="49" id="laY-Fv-d7n"/>
@@ -102,7 +103,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IIU-hU-jnC" userLabel="LeftScoreLabel">
-                                                <rect key="frame" x="0.0" y="40" width="115" height="49"/>
+                                                <rect key="frame" x="0.0" y="26.5" width="115" height="49"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="115" id="3Ft-Cb-r6z"/>
                                                     <constraint firstAttribute="height" constant="49" id="j80-PT-vX4"/>
@@ -113,16 +114,16 @@
                                             </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="IIU-hU-jnC" firstAttribute="top" secondItem="nzr-Wv-N3T" secondAttribute="bottom" constant="18" id="3V8-7D-PKk"/>
+                                            <constraint firstItem="IIU-hU-jnC" firstAttribute="top" secondItem="nzr-Wv-N3T" secondAttribute="bottom" constant="12" id="3V8-7D-PKk"/>
                                             <constraint firstAttribute="width" constant="290" id="A0B-o7-Uko"/>
                                             <constraint firstAttribute="trailing" secondItem="vY2-d4-yoy" secondAttribute="trailing" constant="34" id="LJp-tM-rWG"/>
                                             <constraint firstItem="IIU-hU-jnC" firstAttribute="centerX" secondItem="c1k-CP-mcf" secondAttribute="centerX" constant="-87.5" id="OXI-Sf-tmx"/>
                                             <constraint firstItem="xdz-3x-X4u" firstAttribute="centerX" secondItem="c1k-CP-mcf" secondAttribute="centerX" constant="87.5" id="WQR-Oy-G0b"/>
-                                            <constraint firstItem="IIU-hU-jnC" firstAttribute="centerY" secondItem="c1k-CP-mcf" secondAttribute="centerY" id="Yqu-Xp-aET"/>
+                                            <constraint firstItem="IIU-hU-jnC" firstAttribute="centerY" secondItem="c1k-CP-mcf" secondAttribute="centerY" constant="-13" id="Yqu-Xp-aET"/>
                                             <constraint firstItem="nzr-Wv-N3T" firstAttribute="leading" secondItem="c1k-CP-mcf" secondAttribute="leading" constant="29" id="fW6-mT-sR6"/>
                                             <constraint firstAttribute="height" constant="128" id="uh4-og-hoP"/>
-                                            <constraint firstItem="xdz-3x-X4u" firstAttribute="centerY" secondItem="c1k-CP-mcf" secondAttribute="centerY" id="vab-D6-hTO"/>
-                                            <constraint firstItem="vY2-d4-yoy" firstAttribute="top" secondItem="c1k-CP-mcf" secondAttribute="top" id="yqa-HP-guw"/>
+                                            <constraint firstItem="xdz-3x-X4u" firstAttribute="centerY" secondItem="c1k-CP-mcf" secondAttribute="centerY" constant="-11.5" id="vab-D6-hTO"/>
+                                            <constraint firstItem="vY2-d4-yoy" firstAttribute="top" secondItem="c1k-CP-mcf" secondAttribute="top" constant="-8" id="yqa-HP-guw"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -137,12 +138,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="jtV-aE-L0V" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="327" id="JrG-32-Y4w"/>
                             <constraint firstItem="dca-ZX-alu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lys-Q6-dm0"/>
+                            <constraint firstItem="c1k-CP-mcf" firstAttribute="top" secondItem="dca-ZX-alu" secondAttribute="bottom" constant="76" id="OpL-Y3-cs2"/>
                             <constraint firstItem="dyY-sl-SA6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="R8i-Fa-od3"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dyY-sl-SA6" secondAttribute="bottom" id="WYg-dr-mgF"/>
                             <constraint firstItem="jtV-aE-L0V" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cGH-1V-cZc"/>
                             <constraint firstItem="jtV-aE-L0V" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" constant="4" id="e7S-vF-Tf3"/>
+                            <constraint firstItem="jtV-aE-L0V" firstAttribute="top" secondItem="dca-ZX-alu" secondAttribute="bottom" constant="-7" id="e9i-1u-SZr"/>
                             <constraint firstItem="dca-ZX-alu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-74.5" id="jOO-O8-hM5"/>
                             <constraint firstItem="dyY-sl-SA6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="p4I-q0-RKl"/>
                             <constraint firstAttribute="trailing" secondItem="jtV-aE-L0V" secondAttribute="trailing" id="pEb-WW-KYH"/>
