--- a/XcodeAndSwift3/AddNumbers/AddNumbers/Base.lproj/Main.storyboard
+++ b/XcodeAndSwift3/AddNumbers/AddNumbers/Base.lproj/Main.storyboard
@@ -39,11 +39,11 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePr-JQ-bkL">
-                                <rect key="frame" x="64.5" y="306" width="246" height="33.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePr-JQ-bkL">
+                                <rect key="frame" x="16" y="306" width="343" height="48"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="33.5" id="meb-mc-Q73"/>
-                                    <constraint firstAttribute="width" constant="246" id="zMb-VE-GTr"/>
+                                    <constraint firstAttribute="height" constant="48" id="meb-mc-Q73"/>
+                                    <constraint firstAttribute="width" constant="343" id="zMb-VE-GTr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
